2010-01-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole.

2010-01-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure,
	* configure.in: added device/lib/huge/Makefile

2010-01-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/asm/mcs51/features.h: added _RETURN
	* device/include/setjmp.h: adapted for model-huge
	* device/lib/_setjmp.c: adapted for xstack and model-huge
	* device/lib/_decdptr.c(_decdptr): __naked
	* device/lib/_logexpf.c (_fs_cordic_rshift_r765_unsigned): __naked
	* device/lib/_mullong.c: use _AUTOMEM from sdcc-lib.h
	* device/lib/_startup.c (_sdcc_external_startup): __nonbanked
	* device/lib/_strlen.c,
	* device/lib/abs.c,
	* device/lib/labs.c: use _RETURN
	* device/lib/cotf.c,
	* device/lib/tanf.c,
	* device/lib/tancotf.c (tancotf): changed iscotan to BOOL
	* device/lib/expf.c,
	* device/lib/logf.c: adapted for model-huge
	* device/lib/printf_large.c: set USE_FLOATS for ds390, xstack, model-huge
	* device/lib/huge: added directory
	* device/lib/huge/Makefile.in: new, added
	* src/mcs51/gen.c (aopPut, Push): factored out Push,
	  (getFreePtr): save R0 in B for PCALL,
	  (opIsGptr): also true for banked function pointers,
	  (saveRegisters, unsaveRegisters): always save for banked functions,
	    don't kill R0,
	  (genCall, genPcall, genEndFunction): even static functions are banked in
	    model-huge, address could be taken,
	  (genPcall): don't kill R0-R2 before genSend
	* src/mcs51/main.c (_mcs51_keywords): added nonbanked,
	  (_mcs51_finaliseOptions): added MODEL_HUGE,
	    xstack float lib is not reentrant,
	  (mcs51_port): added MODEL_HUGE, fixed banked_overhead bug
	* src/mcs51/peep.c (termScanAtFunc): always abort for banked call and R0-R2
	* src/SDCC.y: remoed warning W_BANKED_WITH_STATIC
	* src/SDCCast.c (funcOfType): all C support routines are nonbanked,
	  (processParms): fixed banked function pointer is no codepointer,
	  (createFunction): fixed banked_overhead bug